--- a/Pruebas/prueba.html
+++ b/Pruebas/prueba.html
@@ -12,13 +12,7 @@
 
 	</script>
 	<style type="text/css">
-		.oculto {
-			display: none;
-		}
-
-		.bloque {
-			display: block;
-		}
+		
 	</style>
 
 </head>
@@ -26,7 +20,7 @@
 <body>
 
 	<header>
-		<h1>Proyecto final en JavaScript: Formulario</h1>
+		<h1>Formulario en JavaScript</h1>
 	</header>
 	<article>
 		<form name="formulario" id="formulario" action="#" method="post">
