--- a/Pruebas/Ejercicio 23.html
+++ b/Pruebas/Ejercicio 23.html
@@ -13,7 +13,7 @@
 	<!--********Link a JQuery********-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!--********Link a JavaScript********-->
-  	<script src='script/other'> </script>
+  	<script src='script/other.js'> </script>
   	
 </head>
 
