--- a/Pruebas/prueba.html
+++ b/Pruebas/prueba.html
@@ -160,7 +160,7 @@
 			    <input type="hidden" id="aficion" name="aficion" />
 			</fieldset>
 		 	<fieldset id="fsBotones" class="Izquierda">
-			   	<button type="submit"><big>Enviar datos</big> </button>
+			   	<button type="submit" onclick="escribeDatos()"><big>Enviar datos</big> </button>
 			    <button type="reset"><big>Restablecer valores</big></button>
 		 	</fieldset>
 		 	<fieldset id="fsFechaFinal" class="Izquierda">
