--- a/Pruebas/Ejercicio 23.html
+++ b/Pruebas/Ejercicio 23.html
@@ -27,7 +27,7 @@
    			    <p><label for="Correo">Cuenta de correo</label>
     			    <input type="email" title="Introduzca su dirección de correo" maxlength="50"  placeholder="tucorreo@ejemplo.com" name="Correo" id="Correo" required>
 
-                    <span id="errorCorreo" class="error"> </span></p>
+                <span id="errorCorreo" class="error"> </span></p>
                 <p><label for="Clave1">Introduzca su clave de acceso</label>
                     <input id="Clave1" maxlength="12" name="Clave1" type="password" required
                            pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" />
@@ -135,7 +135,7 @@
 		 	<fieldset id="fsFechaFinal" class="Izquierda">
 		 		<p id="fechaHoy"></p>
 		 	</fieldset>
-	 	</fieldset>
+	 	</fieldset>.0
  	</form>	
 	 <div id="resultado" class="oculto" style="display:none">
 			<h2>Los datos del usuario son los siguientes</h2>			
