--- a/David_Bartolome_Alonso/formulario.html
+++ b/David_Bartolome_Alonso/formulario.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Formularios con JavaScript</title>
-	<meta name="description" content="Ejercicios del Curso CMF">
+	<meta name="description" content="Formulario en JavaScript">
 	<meta name="author" content="David">
 				<!--****Link a CSS*****-->
   	<link rel="stylesheet" href="css/formulario.css">
