--- a/David_Bartolome_Alonso/formulario.html
+++ b/David_Bartolome_Alonso/formulario.html
@@ -10,6 +10,7 @@
 				<!--****Link a CSS*****-->
   	<link rel="stylesheet" href="css/formulario.css">
 	  			<!--****Link a JavaScript*****-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="script/clases.js"></script>
 </head>
 
@@ -124,7 +125,7 @@
 		<input type="hidden" id="aficion" name="aficion" />
 		</fieldset>
 	 	<fieldset id="fsBotones" class="Izquierda">
-                        <input type="submit" name="enviar"  class="submit" id="submit" value="Enviar datos" >
+                        <input type="submit" name="submit"  class="submit" id="submit" value="Enviar datos" >
                         <input type="reset" name="borrar" value="Restablecer valores">
 
 	 	</fieldset>
