--- a/ID/formulario.html
+++ b/ID/formulario.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Stefan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="image/favicon1.png" sizes="600x600">
-    <link href="formulario.css" rel="stylesheet">
+    <link href="css/formulario.css" rel="stylesheet">
 
 </head>
 
@@ -124,7 +124,7 @@
     <footer>
         <p>Editado por Daavid</p>
     </footer>
-    <script src="script/formulario"></script>
+    <script src="script/formulario.js"></script>
 </body>
 
 </html>
